Add application script with MVC pattern

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 			</div>
 		</header>
 		<div class="content">
-			<div class="login-block visible" id="login-form">
+			<!--<div class="content-login-block visible" id="login-form">
 				<h3>Please, login to continue</h3>
-				<!--<form method="POST" action="">-->
 					<p>
 						<input type="text" name="username" id="username" placeholder="Username or Email">
 					</p>
@@ -38,9 +37,8 @@
 					<p class="submit">
 						<input type="button" name="submit" id="login" value="Login">
 					</p>
-				<!--</form>-->
-			</div>
-			<div class="app hidden" id="app">
+			</div>-->
+			<div class="content-app hidden" id="app">
 				
 			</div>
 		</div>
