Add addTodoItem function to the Model

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<span>Copyright &copy; To Do Application, 2019. All rights reserved.</span>
 			</div>
 		</footer>
-		<script src="js/login.js"></script>
+		<!--<script src="js/login.js"></script>-->
 		<script src="js/app.js"></script>
 	</body>
 </html>
