Add visual representation of input panel to the View class constructor

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<input type="button" name="submit" id="login" value="Login">
 					</p>
 			</div>-->
-			<div class="content-app hidden" id="app">
+			<div class="content-app" id="app">
 				
 			</div>
 		</div>
