--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			<!--<div class="content-login-block visible" id="login-form">
 				<h3>Please, login to continue</h3>
 					<p>
-						<input type="text" name="username" id="username" placeholder="Username or Email">
+						<input type="text" name="username" id="username" class="username" placeholder="Username or Email">
 					</p>
 					<p>
-						<input type="password" name="password" id="password" placeholder="Password">
+						<input type="password" name="password" id="password" class="password" placeholder="Password">
 					</p>
 					<p class="remember-me">
 						<label>
