--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 			</div>
 		</footer>
 		<!--<script src="js/login.js"></script>-->
-		<script src="js/app.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
