--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			</div>
 		</header>
 		<div class="content">
-			<!--<div class="content-login-block visible" id="login-form">
+			<div class="content-login-block visible" id="login-form">
 				<h3>Please, login to continue</h3>
+				<form id="loginForm">
 					<p>
 						<input type="text" name="username" id="username" class="username" placeholder="Username or Email">
 					</p>
@@ -37,8 +38,9 @@
 					<p class="submit">
 						<input type="button" name="submit" id="login" value="Login">
 					</p>
-			</div>-->
-			<div class="content-app" id="app">
+				</form>
+			</div>
+			<div class="content-app hidden" id="app">
 				
 			</div>
 		</div>
@@ -47,7 +49,7 @@
 				<span>Copyright &copy; To Do Application, 2019. All rights reserved.</span>
 			</div>
 		</footer>
-		<!--<script src="js/login.js"></script>-->
+		<script type="module" src="js/login/login.js"></script>
 		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
